# JKGadget

./: .clang-format  CMakeLists.txt  README.md  todo.txt
Demo/: CMakeLists.txt  demo.json  main.cpp  main.h
IGI/: CMakeLists.txt
IGI/inc/: igicontext.h  igiutil.h  macro_helper.h  numconfig.h  render.h  serialize.h  shared_vector.h
IGI/inc/igiacceleration/: circular_list.h  mem_arena.h  parallel.h  task_queue.h
IGI/inc/igiaccleration/: circular_list.h  mem_arena.h  task_queue.h
IGI/inc/igicamera/: camera.h
IGI/inc/igientity/: ITransformable.h  entity.h  transform_base.h
IGI/inc/igigeometry/: ISurface.h  bound.h  cylinder.h  plane.h  ray.h  sphere.h  surface_interaction.h  triangle.h
IGI/inc/igiintegrator/: IIntegrator.h  integrator_debug.h  path_trace.h
IGI/inc/igimaterial/: IMaterial.h  interaction.h  material_debug.h  material_emissive.h  material_mix.h  material_phong.h
IGI/inc/igimath/: const.h  mat4x4f.h  mathutil.h  matrix.h  matrix.natvis  mcode.h  quaternion.h  random.h  ray.h  single.h  transform.h  vec.h
IGI/inc/igiresource/: mem_arena.h
IGI/inc/igiscene/: IAggregate.h  IAggregateItem.h  ISBVHItem.h  aggregate.h  aggregate_sbvh.h  aggregate_vector.h  scene.h  scene_parser.h
IGI/inc/igitexture/: color.h  texture.h
IGI/inc/igiutilities/: igiassert.h  igiutil.h  serialize.h  shared_vector.h
IGI/src/geometry/: cylinder.cpp  sphere.cpp  triangle.cpp
IGI/src/integrator/: path_trace.cpp
IGI/src/scene/: aggregate.c  aggregate.cpp  aggregate_vector.cpp  scene_parser.cpp
PNGParvus/: CMakeLists.txt  png.h
Reflitest/: CMakeLists.txt  reflitest.h  sample.cpp
rflite/: CMakeLists.txt  rflite.h  sample.cpp
rflite/rflite/: rflite.h
rflite/rflite/internal/: attribute.h  macro.h  refl_dynamic.h  refl_static.h  utilities.h
